<resources>
    <string name="app_name">Proffer</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_profile">Профиль</string>
    <string name="recommendations">Рекомендации</string>
    <string name="reviews">отзывов</string>
    <string name="btn_ads">Объявления</string>
    <string name="btn_subs">Подписки</string>
    <string name="orders">Заказы</string>
    <string name="to_orders">Перейти к заказам</string>
    <string name="active">активных</string>
    <string name="active_1">активное</string>
    <string name="to_ads">Перейти к объявлениям</string>
    <string name="to_control">Перейти в управление</string>
    <string name="control_profile">Управление профилем</string>
    <string name="available_checks_extensions">Доступные проверки и расширения</string>
    <string name="no">Нет</string>
    <string name="reviews_1">отзыв</string>
    <string name="reviews_2_4">отзыва</string>
    <string name="to_reviews">Перейти к отзывам</string>
    <string name="text_reviews">Отзывы</string>
    <string name="description">Описание</string>
    <string name="buy_with_delivery">Купить с доставкой</string>
    <string name="characteristics">Характеристики</string>
    <string name="address">Адрес</string>
    <string name="similar_products">Похожие товары:</string>
    <string name="product">Продукт</string>
    <string name="search_by_messages">Поиск по сообщениям</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_chat">Чат</string>
    <string name="new_add">новое объявление</string>
    <string name="title_ads">Объявления</string>
    <string name="new_ad">Новое объявление</string>
    <string name="gps">GPS-навигаторы</string>
    <string name="anti_theft">Противоугонные устройства</string>
    <string name="select_category">Выберите категорию</string>
    <string name="spares">Запчасти</string>
    <string name="tires">Шины, диски и колёса</string>
    <string name="audio_video">Аудио и видеотехника</string>
    <string name="accessories">Аксессуары</string>
    <string name="tuning">Тюнинг</string>
    <string name="trunks">Багажники и фаркопы</string>
    <string name="tools">Инструменты</string>
    <string name="trailers">Прицепы</string>
    <string name="equipment">Экипировка</string>
    <string name="autocosmetics">Автокосметика и автохимия</string>
    <string name="for_cars">Для автомобилей</string>
    <string name="for_motorcycles">Для мототехники</string>
    <string name="for_trucks_and_special_equipment">Для грузовиков и спецтехники</string>
    <string name="for_water_transport">Для водного транспорта</string>
    <string name="sign_in">Войти</string>
    <string name="continue_sing">Продолжить</string>
    <string name="register">Зарегистрироваться</string>
    <string name="privacy_policy">Нажимая «Продолжить», вы принимаете лицензионное соглашение и политику конфиденциальности.</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="first_name_last_name">Имя Фамилия</string>
    <string name="have_account">У меня уже есть аккаунт</string>
    <string name="title">Название</string>
    <string name="enter_title">Введите название</string>
    <string name="title_price">Цена, ₽</string>
    <string name="enter_price">Укажите цену</string>
    <string name="enter_product_information">Укажите информацию о товаре</string>
    <string name="title_photo">Фотографии</string>
    <string name="title_location">Местоположение</string>
    <string name="entry_address">Укажите адрес</string>
    <string name="title_phone">Телефон</string>
    <string name="entry_phone_number">Укажите номер телефона</string>
    <string name="place_ad">Разместить объявление</string>
    <string name="no_more_then_10">Не более 10</string>
    <string name="save_ad_error">Не удалось сохранить объявление, повторите попытку позжу</string>
    <string name="ad_saved">Объявление сохранено</string>
    <string name="delete_ad_error">Не удалось удалить объявление, повторите попытку позжу</string>
    <string name="ad_deleted">Объявление удалено</string>
    <string name="wait">Подождите…</string>
    <string name="fill_all_field">Заполните все поля</string>
    <string name="rub">₽</string>
    <string name="specify">Уточнить</string>
    <string name="all_category">Все категории</string>
    <string name="city">Город</string>
    <string name="entry_name_of_city">Введите название города</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="ad_type">Тип объявления</string>
    <string name="buy">Куплю</string>
    <string name="sell">Продам</string>
    <string name="sort_by">Сортировать по</string>
    <string name="default_text">По умолчанию</string>
    <string name="old_ones_first">Сначала старые</string>
    <string name="new_ones_first">Сначала новые</string>
    <string name="cheap_ones_first">Сначала дешевые</string>
    <string name="expensive_ones_first">Сначала дорогие</string>
    <string name="apply_filter">Применить фильтр</string>
    <string name="one_ad_type_must_be_selected">Хотя бы один ТИП объявлений должен быть выбран</string>
    <string name="profile_management">Управление профилем</string>
    <string name="e_mail">E-mail</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="could_not_save">Не удалось сохрать, попробуйте позже</string>
    <string name="saved">Сохранено</string>
    <string name="btn_active">Активные</string>
    <string name="btn_completed">Завершенные</string>
    <string name="user_registered">Пользователь зарегистрирован</string>
    <string name="user_with_this_login_already_exists">Пользователь с таким логином уже существует</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="you_sign_in">Вы вошли в аккаунт</string>
    <string name="error_password_is_not_valid">Пароль должен содержит цифры, заглавные и строчные буквы; от 8 символов</string>
</resources>