<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_empty_24"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_ads"
        android:icon="@drawable/ic_playlist_add_24"
        android:title="@string/title_ads" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_chat_24"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_profile" />

</menu>