<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_margin="10dp"
        android:background="@drawable/tools_shape"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/specify"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/title_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/all_category"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/title_category">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spares" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tires" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_video" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessories" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuning" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trunks" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tools" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anti_theft" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/title_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/city"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_rounded_stroke"
                android:hint="@string/entry_name_of_city"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_city" />

            <TextView
                android:id="@+id/title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_price"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/edit_city" />

            <EditText
                android:id="@+id/edit_price_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_rounded_stroke"
                android:hint="@string/from"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toStartOf="@id/edit_price_to"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_price" />

            <EditText
                android:id="@+id/edit_price_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_rounded_stroke"
                android:hint="@string/to"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_price_from"
                app:layout_constraintTop_toBottomOf="@id/title_price" />

            <TextView
                android:id="@+id/title_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ad_type"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/edit_price_from" />

            <CheckBox
                android:id="@+id/btn_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                app:layout_constraintTop_toBottomOf="@id/title_type" />

            <CheckBox
                android:id="@+id/btn_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell"
                app:layout_constraintTop_toBottomOf="@id/btn_buy" />

            <TextView
                android:id="@+id/title_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sort_by"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/btn_sell" />

            <RadioGroup
                android:id="@+id/sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_sort">

                <RadioButton
                    android:id="@+id/r_def"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text" />

                <RadioButton
                    android:id="@+id/r_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_ones_first" />

                <RadioButton
                    android:id="@+id/r_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_ones_first" />

                <RadioButton
                    android:id="@+id/r_cheap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cheap_ones_first" />

                <RadioButton
                    android:id="@+id/r_expensive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expensive_ones_first" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>