<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".app.fragments.ads.AdsFragment">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="10dp"
        android:background="@drawable/tools_shape"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/title_ads"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/btn_active"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/btn_completed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/btn_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/btn_completed"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_active" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_ads"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="false"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/btn_add_new_ad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_active"
        app:navGraph="@navigation/ads_navigation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_new_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/new_add"
        app:icon="@drawable/ic_add_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>